[gd_scene load_steps=31 format=3 uid="uid://dx0kws7hwpumu"]

[ext_resource type="Script" path="res://scenes/Map/Map.gd" id="1_3k0c8"]
[ext_resource type="Texture2D" uid="uid://cixiy4vsaghrb" path="res://assets/background/map.png" id="2_g1eyc"]
[ext_resource type="Script" path="res://scenes/Map/Camera2D.gd" id="2_vecvs"]
[ext_resource type="PackedScene" path="res://prefabs/SceneButton/SceneButton.tscn" id="3_kren2"]
[ext_resource type="PackedScene" uid="uid://c5evt78phsk3n" path="res://prefabs/MapButton/MapButton.tscn" id="4_618ha"]
[ext_resource type="Texture2D" uid="uid://cix760x53goy7" path="res://assets/ui/locations/locations_galinnpeak_pip.png" id="5_4c7dp"]
[ext_resource type="Texture2D" uid="uid://cqbp0f3r6orbp" path="res://assets/ui/locations/locations_townhall_pip.png" id="5_s1d2c"]
[ext_resource type="Texture2D" uid="uid://bo1dw28nxmqj3" path="res://assets/ui/locations/locations_pecanhome_pip.png" id="6_62i57"]
[ext_resource type="Texture2D" uid="uid://dkbboiaqvecbo" path="res://assets/ui/locations/locations_peanuthome_pip.png" id="7_0i0u8"]
[ext_resource type="Texture2D" uid="uid://dqnpxqjlgxml" path="res://assets/ui/locations/locations_acornhome_pip.png" id="8_y6cwr"]
[ext_resource type="Texture2D" uid="uid://ct35jr0561r0v" path="res://assets/ui/locations/locations_marketplace_pip.png" id="9_ba8tq"]
[ext_resource type="Texture2D" uid="uid://cxubk7ug2y8kn" path="res://assets/ui/locations/locations_hazelnuthome_pip.png" id="10_satxt"]
[ext_resource type="Theme" uid="uid://dksvrshxgc4ql" path="res://theme/Signpost.tres" id="12_j3ysv"]
[ext_resource type="Texture2D" uid="uid://cq0atsfy2k28j" path="res://assets/ui/locations/locations_almondhome_pip.png" id="12_mrm7y"]
[ext_resource type="Texture2D" uid="uid://dlbnunof712fc" path="res://assets/ui/menu_board.png" id="13_dboj1"]
[ext_resource type="Texture2D" uid="uid://dup2skqu7cfak" path="res://assets/ui/locations/locations_attithcave_pip.png" id="13_rxcjq"]
[ext_resource type="Texture2D" uid="uid://dj0ygsjnm7mcw" path="res://assets/ui/locations/locations_briarspond_pip.png" id="14_3e0pf"]
[ext_resource type="Theme" uid="uid://c044efnplgfdt" path="res://theme/Scroll.tres" id="14_ruq6n"]
[ext_resource type="Texture2D" uid="uid://c2v42kgwdkvb2" path="res://assets/ui/locations/locations_cashewhome_pip.png" id="15_r0no2"]
[ext_resource type="PackedScene" uid="uid://diobmjafrn7j0" path="res://prefabs/UI/WorldStats/world_stats.tscn" id="15_savww"]
[ext_resource type="Texture2D" uid="uid://duspp4bnqhdmh" path="res://assets/ui/locations/locations_lakegalinn_pip.png" id="16_wltem"]
[ext_resource type="Texture2D" uid="uid://dmwrkkbinlsqa" path="res://assets/ui/locations/locations_lookoutpoint_pip.png" id="17_vsxwn"]
[ext_resource type="Texture2D" uid="uid://cohbo3nhb5fog" path="res://assets/ui/locations/locations_pistachiohome_pip.png" id="18_y7wcs"]
[ext_resource type="Texture2D" uid="uid://fao2ua3hfcsh" path="res://assets/ui/locations/locations_scrapyard_pip.png" id="19_ynvys"]
[ext_resource type="Texture2D" uid="uid://pruu5i0ikvx4" path="res://assets/ui/locations/locations_forgottenwoman_pip.png" id="20_kypp1"]
[ext_resource type="Texture2D" uid="uid://c7iwdxjhijexw" path="res://assets/ui/locations/locations_themines_pip.png" id="21_gk4hp"]
[ext_resource type="Texture2D" uid="uid://dej2opkxlqbih" path="res://assets/ui/locations/locations_walnuthome_pip.png" id="22_c0kj6"]
[ext_resource type="Texture2D" uid="uid://duroaskhl38kf" path="res://assets/ui/locations/locations_abandonedstorehouse_pip.png" id="23_0j1ud"]
[ext_resource type="Texture2D" uid="uid://basgsredbnex1" path="res://assets/ui/locations/locations_watertower_pip.png" id="24_5ef4j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d36gl"]

[node name="Map" type="Node2D"]
script = ExtResource("1_3k0c8")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 960.0
offset_bottom = 540.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(960, 540)
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g1eyc")
centered = false

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport"]
anchor_mode = 0
position_smoothing_enabled = true
script = ExtResource("2_vecvs")

[node name="MapButtons" type="Control" parent="SubViewportContainer/SubViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 8
metadata/_edit_use_anchors_ = true

[node name="Galinn Peak" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
offset_left = 136.0
offset_top = 176.0
offset_right = 176.0
offset_bottom = 176.0
scale = Vector2(1, 1)
focus_next = NodePath("../Bulletin Board")
preview = ExtResource("5_4c7dp")
mapDesc = "Daunting in its long climb and unconventional terrain, a trek to the top is a risky endeavor but necessary if you wish to regain your human form. Are you ready?"

[node name="Town Hall" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1178.0
offset_top = 529.0
offset_right = 1218.0
offset_bottom = 529.0
scale = Vector2(1, 1)
focus_next = NodePath("../Bulletin Board")
preview = ExtResource("5_s1d2c")
mapDesc = "The Town Hall helps ensure you don't lose your progress in your adventure and stores any items you want to safekeep."

[node name="Bulletin Board" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1238.0
offset_top = 524.0
offset_right = 1278.0
offset_bottom = 524.0
scale = Vector2(1, 1)
focus_next = NodePath("../Trading Post")
focus_previous = NodePath("../Town Hall")
preview = ExtResource("5_s1d2c")
mapDesc = "Served as a hub for town notices and requests. Accepting quests can lead to helpful rewards for the journey ahead."

[node name="Trading Post" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1086.0
offset_top = 576.0
offset_right = 1126.0
offset_bottom = 576.0
scale = Vector2(1, 1)
focus_next = NodePath("../Tian\'s Corner")
focus_previous = NodePath("../Bulletin Board")
scene = "TradingPost"
preview = ExtResource("6_62i57")
mapDesc = "The main spot in town, it serves as a place to buy or sell general goods and plan for the trip ahead."

[node name="Tian\'s Corner" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 908.0
offset_top = 626.0
offset_right = 948.0
offset_bottom = 626.0
scale = Vector2(1, 1)
focus_next = NodePath("../Textile Services")
focus_previous = NodePath("../Trading Post")
preview = ExtResource("7_0i0u8")
mapDesc = "Fresh from the owner's garden plot in Peanut Home, this store sells produce from the Archipelago (Asian-inspired) as well as your regular kitchen staples!"

[node name="Bake & Roast" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1298.0
offset_top = 712.0
offset_right = 1338.0
offset_bottom = 712.0
scale = Vector2(1, 1)
preview = ExtResource("8_y6cwr")
mapDesc = "A cafe for baked goods and coffee with a charming homey-plant rustic atmosphere."

[node name="Textile Services" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1330.0
offset_top = 736.0
offset_right = 1370.0
offset_bottom = 736.0
scale = Vector2(1, 1)
focus_next = NodePath("../Fire Station")
focus_previous = NodePath("../Tian\'s Corner")
preview = ExtResource("8_y6cwr")
mapDesc = "A small textile store that produces and sells fabrics, knit goods, and woven goods."

[node name="Fire Station" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1250.0
offset_top = 466.0
offset_right = 1290.0
offset_bottom = 466.0
scale = Vector2(1, 1)
preview = ExtResource("9_ba8tq")
mapDesc = "In addition to fire prevention, the Fire Station performs search and rescue operations for those lost on the peak and provides upgrades for equipment to increase safety."

[node name="Meteor Institute" parent="SubViewportContainer/SubViewport/MapButtons" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 584.0
offset_top = 438.0
offset_right = 624.0
offset_bottom = 438.0
scale = Vector2(1, 1)
preview = ExtResource("10_satxt")
mapDesc = "Dedicated to collecting meteorological observations and forecasting for the areas within Galinn's Peak, but open for enquiries and anyone who may have questions about the weather."

[node name="NPC Spots" type="Control" parent="SubViewportContainer/SubViewport/MapButtons"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Almond Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 585.0
offset_top = 579.0
offset_right = 625.0
offset_bottom = 579.0
scale = Vector2(1, 1)
preview = ExtResource("12_mrm7y")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Attith Cave" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 320.0
offset_top = 502.0
offset_right = 360.0
offset_bottom = 502.0
scale = Vector2(1, 1)
preview = ExtResource("13_rxcjq")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Briar\'s Pond" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1033.0
offset_top = 718.0
offset_right = 1073.0
offset_bottom = 718.0
scale = Vector2(1, 1)
preview = ExtResource("14_3e0pf")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Butternut Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1000.0
offset_top = 422.0
offset_right = 1040.0
offset_bottom = 422.0
scale = Vector2(1, 1)
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Cashew Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1308.0
offset_top = 376.0
offset_right = 1348.0
offset_bottom = 376.0
scale = Vector2(1, 1)
preview = ExtResource("15_r0no2")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Hazelnut Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 618.0
offset_top = 452.0
offset_right = 658.0
offset_bottom = 452.0
scale = Vector2(1, 1)
preview = ExtResource("10_satxt")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Lake Galinn" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1246.0
offset_top = 844.0
offset_right = 1286.0
offset_bottom = 844.0
scale = Vector2(1, 1)
preview = ExtResource("16_wltem")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Lookout Point" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 818.0
offset_top = 470.0
offset_right = 858.0
offset_bottom = 470.0
scale = Vector2(1, 1)
preview = ExtResource("17_vsxwn")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Peanut Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 934.0
offset_top = 652.0
offset_right = 974.0
offset_bottom = 652.0
scale = Vector2(1, 1)
preview = ExtResource("7_0i0u8")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Pecan Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1056.0
offset_top = 592.0
offset_right = 1096.0
offset_bottom = 592.0
scale = Vector2(1, 1)
preview = ExtResource("6_62i57")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Pistachio Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
offset_left = 106.0
offset_top = 352.0
offset_right = 146.0
offset_bottom = 352.0
scale = Vector2(1, 1)
preview = ExtResource("18_y7wcs")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Scrap Yard" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 903.0
offset_top = 510.0
offset_right = 943.0
offset_bottom = 510.0
scale = Vector2(1, 1)
preview = ExtResource("19_ynvys")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="The Forgotten Woman" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1528.0
offset_top = 930.0
offset_right = 1568.0
offset_bottom = 930.0
scale = Vector2(1, 1)
preview = ExtResource("20_kypp1")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="The Mines" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 821.0
offset_top = 563.0
offset_right = 861.0
offset_bottom = 563.0
scale = Vector2(1, 1)
preview = ExtResource("21_gk4hp")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Town Square" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1210.0
offset_top = 546.0
offset_right = 1250.0
offset_bottom = 546.0
scale = Vector2(1, 1)
preview = ExtResource("5_s1d2c")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Walnut Home" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1360.0
offset_top = 974.0
offset_right = 1400.0
offset_bottom = 974.0
scale = Vector2(1, 1)
preview = ExtResource("22_c0kj6")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Waste Disposal" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1386.0
offset_top = 452.0
offset_right = 1426.0
offset_bottom = 452.0
scale = Vector2(1, 1)
preview = ExtResource("23_0j1ud")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Water Tower" parent="SubViewportContainer/SubViewport/MapButtons/NPC Spots" instance=ExtResource("4_618ha")]
layout_mode = 2
offset_left = 1224.0
offset_top = 410.0
offset_right = 1264.0
offset_bottom = 410.0
scale = Vector2(1, 1)
preview = ExtResource("24_5ef4j")
skipPreview = true
mapDesc = "There seems to be someone here today. Talk to the resident?"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = 200.0
offset_right = 100.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -44.0
offset_top = -147.0
offset_right = 164.0
offset_bottom = 118.0

[node name="Town Hall" parent="Control/VBoxContainer" instance=ExtResource("3_kren2")]
layout_mode = 2
text = "Town Hall"

[node name="Bulletin Board" parent="Control/VBoxContainer" instance=ExtResource("3_kren2")]
layout_mode = 2
text = "Bulletin Board"

[node name="Explore Town" parent="Control/VBoxContainer" instance=ExtResource("3_kren2")]
layout_mode = 2
text = "Explore Town"

[node name="Climb Peak" parent="Control/VBoxContainer" instance=ExtResource("3_kren2")]
layout_mode = 2
text = "Climb Peak"
scene = "Mountain"

[node name="RightPanel" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 540.0
offset_top = 350.0
offset_right = 924.0
offset_bottom = 510.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 8
theme = ExtResource("12_j3ysv")

[node name="MarginContainer" type="MarginContainer" parent="RightPanel"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 8

[node name="MapDescBG" type="NinePatchRect" parent="RightPanel/MarginContainer"]
layout_mode = 2
texture = ExtResource("13_dboj1")
patch_margin_left = 32
patch_margin_top = 24
patch_margin_right = 32
patch_margin_bottom = 24
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="DescPadding" type="MarginContainer" parent="RightPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 35

[node name="FlowContainer" type="FlowContainer" parent="RightPanel/MarginContainer/DescPadding"]
layout_mode = 2

[node name="MapDesc" type="RichTextLabel" parent="RightPanel/MarginContainer/DescPadding/FlowContainer"]
clip_contents = false
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_d36gl")
text = "This is the Town Hall."
fit_content = true

[node name="TitleMargin" type="MarginContainer" parent="RightPanel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = -43

[node name="MapName" type="Label" parent="RightPanel/MarginContainer/TitleMargin"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("14_ruq6n")
text = "Town Hall"

[node name="WorldStats" parent="." instance=ExtResource("15_savww")]
